# universal-service-rs

./: Cargo.toml  README.md  example-service-test.ps1
examples/: service.rs
src/: lib.rs  windows_ffi_service_main.rs  windows_simple_service.rs
