[package]
name = "universal-service"
version = "0.1.0"
edition = "2021"
authors = ["Jacob Okamoto <oko+github@oko.io>"]
license = "MIT"
repository = "https://github.com/oko/windows-service-detector-rs"
description = "A Rust crate that provides building blocks for creating service binaries across operating system platforms."

[dependencies]
anyhow = "1.0.71"
ctrlc = "3.4.0"

[target.'cfg(target_os = "windows")'.dependencies]
once_cell = "1.18.0"
windows-service-detector = "0.1.0"
windows-service = "0.6.0"